# subdomi-scrap

./: LICENCE  NEWS.txt  README.md  setup.cfg
src/subdomi-scrap/: __main__.py
