[metadata]
name = subdomi-scrap
version = 1.1.0
author = Burak Eselik
author_email = eselik.burak@gmail.com
description = A tool that can find subdomains of valid domains via scraping.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BurakEselik/subdomi-scrap
project_urls =
    Bug Tracker = https://github.com/BurakEselik/subdomi-scrap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    bs4
    requests

[options.packages.find]
where = src